Fixed messed up nav bar from last merge and likned js with Cart

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -7,65 +7,44 @@
     </head>
     <body>
         <nav>
-
-            <div id = "nav-bar-left">
-                <ul>
-                    <li>
-                        <a href=Brands.html>BRANDS</a>
-                    </li>
-                    <li>
-                        <a href=calendar.html>CALENDAR</a>
-                    </li>
-                    <li>
-                        <a href=#>DROPS</a>
-                    </li>
-                    <li>
-                        <a href=inStock.html>IN STOCK</a>
-                    </li>
-                </ul>
-
             <div class="mobile-nav">
                 <div class="dropdown">
                     <button class="dropbtn" onclick="showDropdown()">MENU</button>
                     <div class="dropdown-content" id="nav-dropdown">
                         <a href="Brands.html">BRANDS</a>
-                        <a href="#">CALENDAR</a>
+                        <a href="calendar.html">CALENDAR</a>
                         <a href="#">DROPS</a>
-                        <a href=#>IN STOCK</a>
+                        <a href=inStock.html>IN STOCK</a>
                         <a href=#>PROFILE</a>
                         <a href=#>SAVED</a>
                     </div>
                 </div>
                 <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
                 <button class="cartbtn">CART</button>
-
             </div>
+
             <div class="full-nav">
                 <div id = "nav-bar-left">
                     <ul>
                         <li><a href=Brands.html>BRANDS</a></li>
-                        <li><a href=#>CALENDAR</a></li>
+                        <li><a href=calendar.html>CALENDAR</a></li>
                         <li><a href=#>DROPS</a></li>
-                        <li><a href=#>INSTOCK</a></li>
+                        <li><a href=inStock.html>INSTOCK</a></li>
                     </ul>
                 </div>
-            
                 <div id = "logo">
                     <a href = "homepage.html">
                         <img src="logo.jpg" alt="Thread Core">
                     </a>
                 </div>
-            
-
                 <div id = "nav-bar-right">
                     <ul>
                         <li><a href=#>SEARCH</a></li>
                         <li><a href=#>PROFILE</a></li>
                         <li><a href=#>SAVED</a></li>
-                        <li><a href=#>CART</a></li>
+                        <li id = "cart"><a href=Cart.html>CART</a></li>
                     </ul>
                 </div>
-
             </div>
         </nav>
 
