--- a/src/inStock.html
+++ b/src/inStock.html
@@ -6,46 +6,45 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <nav >
-            <div id = "nav-bar-left">
-                <ul>
-                    <li>
-                        <a href=Brands.html>BRANDS</a>
-                    </li>
-                    <li>
-                        <a href=calendar.html>CALENDAR</a>
-                    </li>
-                    <li>
-                        <a href=#>DROPS</a>
-                    </li>
-                    <li>
+        <nav>
+            <div class="mobile-nav">
+                <div class="dropdown">
+                    <button class="dropbtn" onclick="showDropdown()">MENU</button>
+                    <div class="dropdown-content" id="nav-dropdown">
+                        <a href="Brands.html">BRANDS</a>
+                        <a href="calendar.html">CALENDAR</a>
+                        <a href="#">DROPS</a>
                         <a href=inStock.html>IN STOCK</a>
-                    </li>
-                </ul>
+                        <a href=#>PROFILE</a>
+                        <a href=#>SAVED</a>
+                    </div>
+                </div>
+                <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
+                <button class="cartbtn">CART</button>
             </div>
-            
+
+            <div class="full-nav">
+                <div id = "nav-bar-left">
+                    <ul>
+                        <li><a href=Brands.html>BRANDS</a></li>
+                        <li><a href=calendar.html>CALENDAR</a></li>
+                        <li><a href=#>DROPS</a></li>
+                        <li><a href=inStock.html>INSTOCK</a></li>
+                    </ul>
+                </div>
                 <div id = "logo">
                     <a href = "homepage.html">
-                        <ul>
-                        </ul>
+                        <img src="logo.jpg" alt="Thread Core">
                     </a>
                 </div>
-            
-            <div id = "nav-bar-right">
-                <ul>
-                    <li>
-                        <a href=#>SEARCH</a>
-                    </li>
-                    <li>
-                        <a href=#>PROFILE</a>
-                    </li>
-                    <li>
-                        <a href=#>SAVED</a>
-                    </li>
-                    <li>
-                        <a href=# id = "cart">CART</a>
-                    </li>
-              </ul>
+                <div id = "nav-bar-right">
+                    <ul>
+                        <li><a href=#>SEARCH</a></li>
+                        <li><a href=#>PROFILE</a></li>
+                        <li><a href=#>SAVED</a></li>
+                        <li id = "cart"><a href=Cart.html>CART</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
 
