Centered alignment of text in side navigation - sort of fixed the picture alignment (still not perfect)

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -50,19 +50,21 @@
                 <br>
                 <div id= "secondh4">UPCOMING RELEASES</div>
             <div class = "flex-container">
-                <div>
-                <br>
-                <a href="#">2/10</a>
-                <br>
-                <br>
-                <div id="brandName">GOLF WANG</div>
-                <div id="subfont">Winter Drop 2</div>
+                <div class="sidebarcontainers">
+                    <br>
+                    <a href="#">2/10</a>
+                    <br>
+                    <br>
+                    <div id="brandName">GOLF WANG</div>
+                    <div id="subfont">Winter Drop 2</div>
                 </div>
+                <div class="sidebarcontainers">
                 <img src="golf-wang.JPG" alt="test" width="140" height="165">
+                </div>
             </div>
             <br>
             <div class = "flex-container">
-                <div>
+                <div class="sidebarcontainers">
                     <br>
                     <a href="#">3/10</a>
                     <br>
@@ -70,63 +72,82 @@
                     <div id="brandName">CAR SERVICE</div>
                     <div id="subfont">X DICKIES</div>
                 </div>
+                <div class="sidebarcontainers">
                 <img src="car-service.JPG" alt="test" width="140" height="165">
-            </div>
-            <br>
-            <div class = "flex-container">
-                <div>
-                    <br>
-                    <a href="#">4/15</a>
-                    <br>
-                    <div id="subfont">EXCLUSIVE</div>
-                    <div id="brandName">CHERRY LA</div>
-                    <div id="subfont">Capsule Collection</div>
                 </div>
-                <img src="cherry-la.JPG" alt="test" width="140" height="165">
             </div>
             <br>
             <div class = "flex-container">
-                <div>
+                    <br>
+                    <div class="sidebarcontainers">
+                    
+                        <br>
+                        <a href="#">4/15</a>
+                        <br>
+                        <div id="subfont">EXCLUSIVE</div>
+                        <div id="brandName">CHERRY LA</div>
+                        <div id="subfont">Capsule Collection</div>
+                    
+                </div>
+                <div class="sidebarcontainers">
+                <img src="cherry-la.JPG" alt="test" width="140" height="165">
+                </div>
+            </div>
+            <br>
+            <div class = "flex-container">
+                <div class= "sidebarcontainers">
+                    <br>
                     <a href="#">6/20</a>
                     <br>
                     <br>
                     <div id="brandName">NB X PATTA</div>
                     <div id="subfont">New Balance Drop</div>
                 </div>
+                <div class="sidebarcontainers">
                 <img src="nb-patta.JPG" alt="test" width="140" height="165">
+                </div>
             </div>
             <br>
             <div class = "flex-container">
-                <div>
+                <div class="sidebarcontainers">
+                    <br>
                     <a href="#">7/23</a>
                     <br>
                     <br>
                     <div id="brandName">CONVERSE</div>
                     <div id="subfont">X A-COLD-WALL</div>
                 </div>
+                <div class="sidebarcontainers">
                 <img src="converse.JPG" alt="test" width="140" height="165">
+                </div>
             </div>
             <br>
             <div class = "flex-container">
-                <div>
+                <div class="sidebarcontainers">
+                    <br>
                     <a href="#">8/4</a>
                     <br>
                     <br>
                     <div id="brandName">GRAMACCI</div>
                     <div id="subfont">COLLECTION</div>
                 </div>
+                <div class="sidebarcontainers">
                 <img src="gramacci-collection.JPG" alt="test" width="140" height="165">
+                </div>
             </div>
             <br>
             <div class = "flex-container">
-                <div>
+                <div class = "sidebarcontainers"> 
+                    <br>
                     <a href="#">9/14</a>
                     <br>
                     <br>
                     <div id="brandName">DR.MARTENS</div>
                     <div id="subfont">X MARC JACOBS</div>
                 </div>
-                <img src="dr-martens.JPG" alt="test" width="140" height="165">
+                <div class="sidebarcontainers">
+                    <img src="dr-martens.JPG" alt="test" width="140" height="165">
+                </div>
                 </div>
             </div>
             <div class="mainColumn">
