--- a/src/inStock.html
+++ b/src/inStock.html
@@ -75,10 +75,12 @@
             <div id = "in-stock-main">
                 <div class = "in-stock-item" >
                     <a href=#>
-                        <p class = "in-stock-img"></p>
+                        <p class = "in-stock-img">
+                            <img src = "Pleasures-Freaks T-Shirt.jpg">
+                        </p>
                         <div class = "in-stock-text">
                             <p><strong>PLEASURES</strong></p>
-                            <p>Freaks T-Shirt</p>
+                            <p class = 'in-stock-item-name'>Freaks T-Shirt</p>
                             <p>$38</p>
                             <button id = "add-to-cart-button" onclick = "addItemToCart(this)">Add To Cart</button>
                         </div>
@@ -86,7 +88,9 @@
                 </div>
                 <div class = "in-stock-item">
                     <a href=#>
-                        <p class = "in-stock-img"></p>
+                            <p class = "in-stock-img">
+                                    <img src = "FEAR OF GOD-Pleated Suit Pant.jpg">
+                                </p>
                         <div class = "in-stock-text">
                             <p><strong>FEAR OF GOD</strong></p>
                             <p>Pleated Suit Pant</p>
