linked my merge with molly's and claudia's, should be ready for demo

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -183,7 +183,7 @@
                     <td class="Alphabet">C</td>
                     <td>
                         <p>CONVERSE</p>
-                        <p>CHEERY LA</p>
+                        <a href = "CherryLABP.html"><p>CHEERY LA</p></a>
                     </td>
                     <td>
                         <p>COMMON PROJECTS</p>
