--- a/src/inStock.html
+++ b/src/inStock.html
@@ -76,7 +76,7 @@
                 <div class = "in-stock-item" >
                     <a href=#>
                         <p class = "in-stock-img">
-                            <img src = "Pleasures-Freaks T-Shirt.jpg">
+                            <img src = "InStockImages/Pleasures-Freaks T-Shirt.jpg">
                         </p>
                         <div class = "in-stock-text">
                             <p><strong>PLEASURES</strong></p>
@@ -89,7 +89,7 @@
                 <div class = "in-stock-item">
                     <a href=#>
                         <p class = "in-stock-img">
-                            <img src = "FEAR OF GOD-Pleated Suit Pant.jpg">
+                            <img src = "InStockImages/FEAR OF GOD-Pleated Suit Pant.jpg">
                         </p>
                         <div class = "in-stock-text">
                             <p><strong>FEAR OF GOD</strong></p>
@@ -101,7 +101,9 @@
                 </div>
                 <div class = "in-stock-item">
                     <a href=#>
-                        <p class = "in-stock-img"></p>
+                        <p class = "in-stock-img">
+                            <img src = "InStockImages/Jacquemus-Le T-Shirt Jacques.jpg">
+                        </p>
                         <div class = "in-stock-text">
                             <p><strong>JACQUEMUS</strong></p>
                             <p>Le T-Shirt Jacques</p>
