--- a/src/CherryLABP.html
+++ b/src/CherryLABP.html
@@ -3,6 +3,7 @@
     <head>
         <title>Brand Profile</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
     </head>
     <body>
         <nav>
