--- a/src/homepage.html
+++ b/src/homepage.html
@@ -2,6 +2,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <title>Thread Core</title> <!--Home?-->
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
       </head>
       <body>
         <nav>
