updated homepage.html image paths

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -59,7 +59,7 @@
                     <div id="subfont">Winter Drop 2</div>
                 </div>
                 <div class="sidebarcontainers">
-                <img src="golf-wang.JPG" alt="test" width="140" height="165">
+                <img src="homepage/golf-wang.JPG" alt="test" width="140" height="165">
                 </div>
             </div>
             <br>
@@ -73,7 +73,7 @@
                     <div id="subfont">X DICKIES</div>
                 </div>
                 <div class="sidebarcontainers">
-                <img src="car-service.JPG" alt="test" width="140" height="165">
+                <img src="homepage/car-service.JPG" alt="test" width="140" height="165">
                 </div>
             </div>
             <br>
@@ -90,7 +90,7 @@
                     
                 </div>
                 <div class="sidebarcontainers">
-                <img src="cherry-la.JPG" alt="test" width="140" height="165">
+                <img src="homepage/cherry-la.JPG" alt="test" width="140" height="165">
                 </div>
             </div>
             <br>
@@ -104,7 +104,7 @@
                     <div id="subfont">New Balance Drop</div>
                 </div>
                 <div class="sidebarcontainers">
-                <img src="nb-patta.JPG" alt="test" width="140" height="165">
+                <img src="homepage/nb-patta.JPG" alt="test" width="140" height="165">
                 </div>
             </div>
             <br>
@@ -118,7 +118,7 @@
                     <div id="subfont">X A-COLD-WALL</div>
                 </div>
                 <div class="sidebarcontainers">
-                <img src="converse.JPG" alt="test" width="140" height="165">
+                <img src="homepage/converse.JPG" alt="test" width="140" height="165">
                 </div>
             </div>
             <br>
@@ -132,7 +132,7 @@
                     <div id="subfont">COLLECTION</div>
                 </div>
                 <div class="sidebarcontainers">
-                <img src="gramacci-collection.JPG" alt="test" width="140" height="165">
+                <img src="homepage/gramacci-collection.JPG" alt="test" width="140" height="165">
                 </div>
             </div>
             <br>
@@ -146,7 +146,7 @@
                     <div id="subfont">X MARC JACOBS</div>
                 </div>
                 <div class="sidebarcontainers">
-                    <img src="dr-martens.JPG" alt="test" width="140" height="165">
+                    <img src="homepage/dr-martens.JPG" alt="test" width="140" height="165">
                 </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                             author, 01/29/20
                         </div>
                     </div>
-                        <img src="threadcore1.JPG" alt="test" width="620" height="350">
+                        <img src="homepage/threadcore1.JPG" alt="test" width="620" height="350">
                 </div>
                 <div id= "instock">IN STOCK NOW</div>
                  <div class = "flex-container">
@@ -187,7 +187,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <img src="yeezy.JPG" alt="test" width="100" height="80">
+                                <img src="homepage/yeezy.JPG" alt="test" width="100" height="80">
                                 <br>
                                 <div id="smallInStock">YEEZY</div>
                                 <div id="typePrice">Blue & Grey Boost</div>
@@ -198,7 +198,7 @@
                             <div class="inStockContainers">
                                 <br>
                                 <br>
-                                <img src="givenchy.JPG" alt="test" width="80" height="100">
+                                <img src="homepage/givenchy.JPG" alt="test" width="80" height="100">
                                 <br>
                                 <div id="smallInStock">GIVENCHY</div>
                                 <div id="typePrice">Rainbow Logo Hoodie</div>
@@ -210,7 +210,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <img src="hat.JPG" alt="test" width="100" height="80">
+                                <img src="homepage/hat.JPG" alt="test" width="100" height="80">
                                 <br>
                                 <div id="smallInStock">FENTY</div>
                                 <div id="typePrice">No Cap</div>
@@ -222,7 +222,7 @@
                                     <br>
                                     <br>
                                     <br>
-                                    <img src="sporty.JPG" alt="test" width="100" height="80">
+                                    <img src="homepage/sporty.JPG" alt="test" width="100" height="80">
                                     <br>
                                     <div id="smallInStock">SPORTY</div>
                                     <div id="typePrice">Wellness Ivy Crewneck</div>
@@ -232,26 +232,26 @@
                  </div>
                  <div class="flex-container">
                      <div class="pictureContainers">
-                        <img src="emily-rat.JPG" alt="test" width="300" height="300">
+                        <img src="homepage/emily-rat.JPG" alt="test" width="300" height="300">
                         <div id="secondh4">EMILY RATAJKOWSKI <br> DROPS INAMORATA SS20</div>
                      </div>
                     <div class="pictureContainers">
-                    <img src="lunay.JPG" alt="test" width="300" height="300">
+                    <img src="homepage/lunay.JPG" alt="test" width="300" height="300">
                     <div id="secondh4">LUNAY LAUNCHES <br> SICK019 COLLECTION</div>
                     </div>
                     <div class="pictureContainers">
-                    <img src="edward-cullen.JPG" alt="test" width="300" height="300">
+                    <img src="homepage/edward-cullen.JPG" alt="test" width="300" height="300">
                     <div id="secondh4">ROBERT PATTINSON'S<br>ANTI-STYLE STYLE</div>
                     </div>
                  </div>
                  <div id="instock">LATEST DROPS</div>
                  <div class="flex-container">
                     <div class="pictureContainers">
-                    <img src="aries.JPG" alt="test" width="475" height="190">
+                    <img src="homepage/aries.JPG" alt="test" width="475" height="190">
                     <div id="secondh4">ARIES SPRING COLLECTION</div>
                     </div>
                     <div class="pictureContainers">
-                        <img src="sporty-rich.JPG" alt="test" width="475" height="190">
+                        <img src="homepage/sporty-rich.JPG" alt="test" width="475" height="190">
                         <div id="secondh4">SPORTY AND RICH SPRING DROP 1</div>
                     </div>
                  </div>
