Fixed brand linking

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -55,13 +55,13 @@
         <hr>
         <div id="alphabetic-sort">
             <li>
-                <a href=#>A</a>
+                <a href=#A>A</a>
             </li>
             <li>
-                <a href=#>B</a>
+                <a href=#B>B</a>
             </li>
             <li>
-                <a href=#>C</a>
+                <a href=#C>C</a>
             </li>
             <li>
                 <a href=#>D</a>
@@ -148,7 +148,7 @@
         <div id = "brand-table">
             <table>
                 <tr>
-                    <td class="Alphabet">A</td>
+                    <td class="Alphabet" id="A">A</td>
                     <td>
                         <p>A.P.C.</p>
                         <p>ACNE STUDIOS</p>
@@ -168,7 +168,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">B</td>
+                    <td class="Alphabet" id="B">B</td>
                     <td>
                         <p>BY FAR</p>
                     </td>
@@ -180,7 +180,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">C</td>
+                    <td class="Alphabet" id="C">C</td>
                     <td>
                         <p>CONVERSE</p>
                         <p>CHEERY LA</p>
