Started product page and linked JS, can now add a size to the item as well, items with different sizes will show as different products in the cart

--- a/src/inStock.html
+++ b/src/inStock.html
@@ -100,7 +100,7 @@
                     </a>
                 </div>
                 <div class = "in-stock-item">
-                    <a href=#>
+                    <a href=product.html>
                         <p class = "in-stock-img">
                             <img src = "InStockImages/Jacquemus-Le T-Shirt Jacques.jpg">
                         </p>
@@ -108,7 +108,6 @@
                             <p><strong>JACQUEMUS</strong></p>
                             <p>Le T-Shirt Jacques</p>
                             <p>$130</p>
-                            <button id = "add-to-cart-button" onclick = "addItemToCart(this)">Add To Cart</button>
                         </div>
                     </a>
                 </div>
